--- a/Jupyter_Notebook.ipynb
+++ b/Jupyter_Notebook.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Peer-Graded Assignment\n"
+    "#### Peer-Graded Assignment"
    ]
   },
   {
@@ -109,29 +109,29 @@
    "source": [
     "##### The objectives for this submission were the following\n",
     "\n",
-    "Exercise 2 - Create a markdown cell with the title of the notebook. (1 pt)\n",
+    "- Create a markdown cell with the title of the notebook. (1 pt)\n",
     "\n",
-    "Exercise 3 - Create a markdown cell for an introduction. (1 pt)\n",
+    "- Create a markdown cell for an introduction. (1 pt)\n",
     "\n",
-    "Exercise 4 - Create a markdown cell to list data science languages. (3 pts)\n",
+    "- Create a markdown cell to list data science languages. (3 pts)\n",
     "\n",
-    "Exercise 5 - Create a markdown cell to list data science libraries. (3 pts)\n",
+    "- Create a markdown cell to list data science libraries. (3 pts)\n",
     "\n",
-    "Exercise 6 - Create a markdown cell with a table of Data Science tools. (3 pts)\n",
+    "- Create a markdown cell with a table of Data Science tools. (3 pts)\n",
     "\n",
-    "Exercise 7 - Create a markdown cell introducing arithmetic expression examples. (1 pt)\n",
+    "- Create a markdown cell introducing arithmetic expression examples. (1 pt)\n",
     "\n",
-    "Exercise 8 - Create a code cell to multiply and add numbers. (2 pts)\n",
+    "- Create a code cell to multiply and add numbers. (2 pts)\n",
     "\n",
-    "Exercise 9 - Create a code cell to convert minutes to hours. (2 pts)\n",
+    "- Create a code cell to convert minutes to hours. (2 pts)\n",
     "\n",
-    "Exercise 10 -Insert a markdown cell to list Objectives. (3 pts)\n",
+    "- Insert a markdown cell to list Objectives. (3 pts)\n",
     "\n",
-    "Exercise 11 - Create a markdown cell to indicate the Author’s name. (2 pts)\n",
+    "- Create a markdown cell to indicate the Author’s name. (2 pts)\n",
     "\n",
-    "Exercise 12 - Share your notebook through GitHub (3 pts)\n",
+    "- Share your notebook through GitHub (3 pts)\n",
     "\n",
-    "Exercise 13 - Take a screenshot of the first page of the notebook. (1 pt)"
+    "- Take a screenshot of the first page of the notebook. (1 pt)"
    ]
   },
   {
